--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,9 @@
 <!--Header-->
 <import src="../../templates/index/header/index.wxml"/>
+<!--Mask-->
+<import src="../../yhui/Mask/index.wxml"/>
 
 <view class="page-container">
     <template is="Header" data="{{dropdownStatus}}"></template>
 </view>
+<template is="Mask" wx:if="{{maskStatus}}"></template>
