--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,10 +4,13 @@
 <import src="../../yhui/Mask/index.wxml"/>
 <!--YHToast-->
 <import src="../../yhui/YHToast/index.wxml"/>
+<!--YHImage-->
+<import src="../../yhui/YHImage/index.wxml"/>
 
 <view class="page-container">
     <template is="Header" data="{{dropdownStatus}}"></template>
-    <button type="primary" bindtap="showRandomToast" size="{{primarySize}}"> Toast</button>
+    <template is="YHImage" data="{{loaded: imgLoadList[img],src:img,width: '100%', height: '200px'}}"/>
+    <button type="primary" bindtap="showRandomToast" size="{{primarySize}}"> Show Toast</button>
 </view>
 <template is="Mask" wx:if="{{maskStatus}}"></template>
 <template is="YHToast" data="{{show:toastStatus,toastContent}}"></template>
